[package]
name = "super-safe-glibc-wrappers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
zeroize = "1.5"

[lib]
crate-type = ["cdylib", "lib"]


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
