[package]
name = "no-flag-4-u"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
zeroize = "1.5"
inline-c = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "log_server"
path = "src/log_server.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
